--- a/styles.css
+++ b/styles.css
@@ -1,63 +1,39 @@
 /* styles.css */
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  
-  header {
-    background-color: #f5f5f5;
-    padding: 10px;
-  }
-  
-  nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  nav ul li {
-    display: inline-block;
-    margin-right: 10px;
-  }
-  
-  nav ul li a {
-    text-decoration: none;
-    color: #333;
-  }
-  
-  section {
-    padding: 20px;
-  }
-  
-  footer {
-    background-color: #f5f5f5;
-    padding: 10px;
-    text-align: center;
-  }
 
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #222;
-    color: #fff;
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #222;
+  color: #fff;
 }
 
-header {
-    background-color: #111;
+header, footer {
+  background-color: #111;
+  padding: 10px;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li {
+  display: inline-block;
+  margin-right: 10px;
 }
 
 nav ul li a {
-    color: #fff;
+  text-decoration: none;
+  color: #fff;
 }
 
 section {
-    background-color: #333;
+  padding: 20px;
+  background-color: #333;
 }
 
 footer {
-    background-color: #111;
-    color: #fff;
+  text-align: center;
 }
-  
